frontend/nohup.out

> frontend@0.0.0 dev
> vite

11:02:00 AM [vite] (client) Re-optimizing dependencies because lockfile has changed

  VITE v8.0.1  ready in 3861 ms

  ➜  Local:   http://localhost:5173/
  ➜  Network: use --host to expose
  ➜  press h + enter to show help
11:02:07 AM [vite] (client) [Unhandled error] SyntaxError: The requested module '/src/targets.ts' does not provide an export named 'TargetEntry'


> frontend@0.0.0 dev
> vite --port 5173

Port 5173 is in use, trying another one...

  VITE v8.0.1  ready in 457 ms

  ➜  Local:   http://localhost:5174/
  ➜  Network: use --host to expose
  ➜  press h + enter to show help

> frontend@0.0.0 dev
> vite --port 5173

Port 5173 is in use, trying another one...
Port 5174 is in use, trying another one...

  VITE v8.0.1  ready in 399 ms

  ➜  Local:   http://localhost:5175/
  ➜  Network: use --host to expose
  ➜  press h + enter to show help

> frontend@0.0.0 dev
> vite --port 5173


  VITE v8.0.1  ready in 278 ms

  ➜  Local:   http://localhost:5173/
  ➜  Network: use --host to expose
  ➜  press h + enter to show help
2:31:01 PM [vite] (client) [Unhandled error] SyntaxError: The requested module '/src/targets.ts' does not provide an export named 'TargetEntry'

node:events:486
      throw er; // Unhandled 'error' event
      ^

Error: read EIO
    at TTY.onStreamRead (node:internal/stream_base_commons:216:20)
Emitted 'error' event on Interface instance at:
    at ReadStream.onerror (node:internal/readline/interface:259:10)
    at ReadStream.emit (node:events:508:28)
    at emitErrorNT (node:internal/streams/destroy:170:8)
    at emitErrorCloseNT (node:internal/streams/destroy:129:3)
    at process.processTicksAndRejections (node:internal/process/task_queues:89:21) {
  errno: -5,
  code: 'EIO',
  syscall: 'read'
}

Node.js v24.13.1
node:events:486
      throw er; // Unhandled 'error' event
      ^

Error: read EIO
    at TTY.onStreamRead (node:internal/stream_base_commons:216:20)
Emitted 'error' event on Interface instance at:
    at ReadStream.onerror (node:internal/readline/interface:259:10)
    at ReadStream.emit (node:events:508:28)
    at emitErrorNT (node:internal/streams/destroy:170:8)
    at emitErrorCloseNT (node:internal/streams/destroy:129:3)
    at process.processTicksAndRejections (node:internal/process/task_queues:89:21) {
  errno: -5,
  code: 'EIO',
  syscall: 'read'
}

Node.js v24.13.1
node:events:486
      throw er; // Unhandled 'error' event
      ^

Error: read EIO
    at TTY.onStreamRead (node:internal/stream_base_commons:216:20)
Emitted 'error' event on Interface instance at:
    at ReadStream.onerror (node:internal/readline/interface:259:10)
    at ReadStream.emit (node:events:508:28)
    at emitErrorNT (node:internal/streams/destroy:170:8)
    at emitErrorCloseNT (node:internal/streams/destroy:129:3)
    at process.processTicksAndRejections (node:internal/process/task_queues:89:21) {
  errno: -5,
  code: 'EIO',
  syscall: 'read'
}

Node.js v24.13.1
